Update FORM  index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p class="lead">Choose how you’d like to hear from us. You can change your preferences anytime.</p>
         </div>
       </div>
-      <form id="optinForm" novalidate>
+      <form action="https://formspree.io/f/xrbavqzo" method="POST">
         <div class="grid grid-2">
           <div class="field">
             <label for="fullName">Full name</label>
