--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="grid grid-2">
           <div class="field">
             <label for="fullName">Full name</label>
-            <input id="fullName" name="fullName" class="input" autocomplete="name" placeholder="e.g., Raghav Agarwal" required />
+            <input id="fullName" name="fullName" class="input" autocomplete="name" placeholder="e.g., AMAN SINGH" required />
             <small class="hint">So we can personalize your messages.</small>
           </div>
           <div class="field">
